--- a/components/Profile/profile.module.css
+++ b/components/Profile/profile.module.css
@@ -8,8 +8,8 @@
   margin: 2rem auto;
   width: 100%;
   height: 200px;
-  border-bottom: 5px solid #5f5f5f;
-  border-right: 5px solid #5f5f5f;
+  border-bottom: 5px solid #919191;
+  border-right: 5px solid #919191;
   border-left: 2px solid#cccccc;
   border-top: 2px solid#cccccc;
   border-bottom-right-radius: 20px;
@@ -23,14 +23,11 @@
 }
 
 .textarea:focus {
-  border-top: 5px solid #5f5f5f;
-  border-left: 5px solid #5f5f5f;
-  border-right: 2px solid#cccccc;
-  border-bottom: 2px solid#cccccc;
-  border-top-left-radius: 20px;
-  border-bottom-right-radius: 5px;
-  box-shadow: 0 0 0 0 rgba(255, 255, 255, 0.25);
-  background-color: #eceff1;
+  border-bottom: 5px solid #919191;
+  border-right: 5px solid #919191;
+  border-top: 2px solid #cccccc;
+  border-left: 2px solid#cccccc;
+  box-shadow: 0 0 0 0 #5f5f5f;
   color: #000000;
 }
 
